--- a/src/main/java/com/hibernatestandalone/pantallas/InicioSesion.form
+++ b/src/main/java/com/hibernatestandalone/pantallas/InicioSesion.form
@@ -48,15 +48,11 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="126" max="-2" attributes="0"/>
-                          <Component id="lblLogo" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
+                      <Group type="102" attributes="0">
                           <EmptySpace min="-2" pref="91" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
-                                  <Component id="lblEmail" max="32767" attributes="0"/>
+                                  <Component id="lblEmail" pref="265" max="32767" attributes="0"/>
                                   <EmptySpace min="67" pref="67" max="-2" attributes="0"/>
                               </Group>
                               <Component id="lblIniciarSesion" max="32767" attributes="0"/>
@@ -80,9 +76,14 @@
                               <Component id="jSeparator1" alignment="0" min="-2" pref="230" max="-2" attributes="0"/>
                               <Component id="btnIniciarSesion" alignment="0" min="-2" pref="130" max="-2" attributes="0"/>
                           </Group>
+                          <EmptySpace min="-2" pref="136" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
+                          <Component id="lblLogo" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="-2" pref="136" max="-2" attributes="0"/>
                   <Component id="lblFondoSesion" min="-2" pref="716" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -90,9 +91,9 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                   <Component id="lblLogo" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="71" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
                   <Component id="lblIniciarSesion" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                   <Component id="lblEmail" min="-2" max="-2" attributes="0"/>
